--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
   "dependencies": {
     "@expo/vector-icons": "^14.0.2",
     "@ianvs/prettier-plugin-sort-imports": "^4.4.1",
+    "@react-native-seoul/masonry-list": "^1.4.2",
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
+    "@types/node": "^22.13.10",
     "clsx": "^2.1.1",
     "expo": "~52.0.37",
     "expo-blur": "~14.0.3",
